--- a/workout_web/app/templates/index.html
+++ b/workout_web/app/templates/index.html
@@ -2,4 +2,10 @@
 
 {% block content %}
     <h1>Welcome!</h1>
+    {% for exercise in exercises %}
+    <div>
+        <p>Muscle group <b>{{ exercise.muscle }}</b>:
+        {{ exercise.exercise }}</p>
+    </div>
+    {% endfor %}
 {% endblock %}
