--- a/workout_web/app/templates/base.html
+++ b/workout_web/app/templates/base.html
@@ -9,7 +9,11 @@
     <body>
         <div>Workout Buddy:
             <a href="{{ url_for('index') }}">Home</a>
+            {% if current_user.is_ananymous %}
             <a href="{{ url_for('login') }}">Login</a>
+            {% else %}
+            <a href="{{ url_for('logout') }}">Logout</a>
+            {% endif %}
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
