--- a/workout_web/app/templates/index.html
+++ b/workout_web/app/templates/index.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Welcome!</h1>
-    {% for exercise in exercises %}
+    <h1>Welcome {{ current_user.username }}!</h1>
+    <h2>Previous Workouts:</h2>
+    {% for workout in workouts %}
     <div>
-        <p>Muscle group <b>{{ exercise.muscle }}</b>:
-        {{ exercise.exercise }}</p>
+        <p>{{ workout.timestamp }}</b>
     </div>
     {% endfor %}
 {% endblock %}
